--- a/src/main/webapp/WEB-INF/database.properties
+++ b/src/main/webapp/WEB-INF/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
 jdbc.username=system
-jdbc.password=qwe123
+jdbc.password=oracledb
